[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"
authors = ["Matteo Muraca <https://github.com/muraca>"]
description = "Advent of Code 2023 in Rust"
repository = "https://github.com/muraca/adventofcode2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
